@@ -1,5 +1,7 @@
 Version 1.5.1 - xx xxx 2010
+
   * Add librets-config-win for Windows. Ticket #138.
+  * Properly parse failed login RETS Reply. Ticket #139.
 
 Version 1.5.0b1 - 22 Mar 2010
 
